--- a/tree.html
+++ b/tree.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="github-markdown.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <title>Project structure of: /x00e0d991e368/cf</title>
+    <title>Project structure of: x00e0d991e368/cf</title>
     <style>
         .directory:hover {
             cursor: pointer;
@@ -75,7 +75,7 @@
 
 <body>
     <article class="markdown-body">
-        <h2>Project structure<span hierarchy="0" class="partial-repository-url"> of: /x00e0d991e368/cf</span><div style="float: right;"><a title="Document index" style="margin:3.5px;" href="index.html"><i class="bi bi-search"></i></a><a title="Feeling lucky" style="margin:3.5px;" id="feeling-lucky" href="#"><i class="bi bi-dice-3"></i></a><a title="Expand tree" style="margin:3.5px;" href="tree.html?full=true" id="expand-tree"><i class="bi bi-caret-down-square"></i></a></div></h2>
+        <h2>Project structure<span hierarchy="0" class="partial-repository-url"> of: x00e0d991e368/cf</span><div style="float: right;"><a title="Document index" style="margin:3.5px;" href="index.html"><i class="bi bi-search"></i></a><a title="Feeling lucky" style="margin:3.5px;" id="feeling-lucky" href="#"><i class="bi bi-dice-3"></i></a><a title="Expand tree" style="margin:3.5px;" href="tree.html?full=true" id="expand-tree"><i class="bi bi-caret-down-square"></i></a></div></h2>
 <ul>
 <li><span hierarchy="0" class="expanded" onclick="toggleVisibility(this)" ><strong class="directory" id="/"><code>cf</code></strong> <em>Root directory or top-level directory</em></span><ul>
 <li><span hierarchy="1" class="expanded" onclick="toggleVisibility(this)" ><strong class="directory" id="/android/"><code>android</code></strong> <em>Android native tools and accessibility integration.</em></span><ul>
